--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
     <html lang="en">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Formulario de Contacto</title>
         <link rel="stylesheet" href="style.css">
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+        <title>Formulario de Contacto</title>
     </head>
         <body>
     <div class="container">
@@ -29,7 +30,7 @@
         <p id="popupMessage"></p>
         <button id="closePopup">Cerrar</button>
     </div>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
 
