--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-    <!DOCTYPE html>
-    <html lang="en">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-        <title>Formulario de Contacto</title>
-    </head>
-        <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <title>Formulario de Contacto</title>
+</head>
+<body>
     <div class="container">
         <h1>Contáctenos</h1>
         <form id="contactForm">
@@ -25,10 +26,6 @@
             </div>
             <button type="submit">Enviar Mensaje</button>
         </form>
-    </div>
-    <div id="popup" class="popup">
-        <p id="popupMessage"></p>
-        <button id="closePopup">Cerrar</button>
     </div>
     <script src="app.js"></script>
 </body>
