--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
                 <label for="message">Mensaje:</label>
-                <textarea id="message" name="msg" rows="4" required></textarea>
+                <textarea id="message" name="mensaje" rows="4" required></textarea>
             </div>
             <button type="submit">Enviar Mensaje</button>
         </form>
